# MVLM

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  qualcom.md
.claude/: settings.local.json
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_wrapper.cpp
android/app/src/main/java/com/mgpu/: CameraActivity.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
benchmarks/: gemm_bench.cpp
scripts/: build_android.sh  perf_mode.sh  push_and_run.sh
src/app/: device_info.cpp  main.cpp
src/engine/: compute.cpp  compute.h  device.cpp  device.h  memory.cpp  memory.h  pipeline.cpp  pipeline.h  profiler.cpp  profiler.h  vision.cpp  vision.h
src/kernels/: activations.cl  attention.cl  embedding.cl  gemm.cl  layernorm.cl  rope.cl  vision.cl
src/models/: gguf_loader.cpp  gguf_loader.h  moondream2.cpp  moondream2.h  tokenizer.cpp  tokenizer.h
tests/: test_device.cpp  test_gguf.cpp  test_tokenizer.cpp  test_utils.h
